# kuuniv.bigdata2025

./: CMakeLists.txt  README.md  a_21_cPython_import.py  i2c_rgb_led_switch  makefile  platformio.ini  receiver  sender  switch_led.c  tone_buzzer
c_example/: artihmetics  celsius2fahr  charNumber  compare  compare.c  compare2  fahr2celsius  fourBit2  genderRatio  increment  limit  limit.c  literal  makefile  oddeven  sizeof  test  testArray  testArray.c  testArray2.c  triangle  triangle2
c_example/part2/: CMakeLists.txt  absolute.c  ascii.c  baseball  baseball.c  bigLetter  bigLetter.c  dice  dice.c  findMax  findValueArray  findValueArray.c  functionSum  functionSum.c  grade  grade.c  grade2  grade2.c  leafYear  leafYear.c  leafyear  makefile  multiply  one2Ten  one2Ten.c  one2TenDoWhile.c  one2TenWhile  one2TenWhile.c  one2tensum  passFail  passFail.c  posZeroNeg  posZeroNeg.c  posZeroNeg2  posZeroNeg2.c  power  randomTwoint  randomTwoint.c  returnValue  returnValue.c  (+8 more)
docker_test/: docker.history.txt
etmega128/: URAT.c  ch11_1_dc_delay.c  ch11_2_dc_delay3.c  ch1_2_led2.c  ch1_3_led3.c  ch3_10_fnd2.c  ch3_3_lcd_switch.c  ch3_6_chattering_error.c  ch5_3_FNDTask.c  ch6_2_timer0led.c  ch6_4_pwmled.c  ch8_2_uart2.c  ch8_3_uart3.c
ml_dl_python/: a01_jupiter.ipynb  a02_fah.ipynb  a03_numpy.ipynb  a04_numpy2.ipynb  a05_data_split.ipynb  a06_regression.ipynb  a07_linear_rgb.ipynb  a08_polynomial_reg.ipynb  a09_classification.ipynb  a10_bach_slope.ipynb  a11_decision_trre.ipynb  a12_cross_validation.ipynb  a13_random_forest.ipynb  a14_titanic.ipynb  a15_pandas.ipynb  a16_kmean.ipynb
network/: endian_conv.c  hello_client.c  pipeServer.c  shm_semaphore.c  test
orange3/: .house_predict.ows.swp.p  American_house.ows  Associations.ipynb  basket_analysis2.csv  healthcare.ows  healthcare2.ows  healthcare_3.ipynb  healthcare_dataset.csv  healthcate_dataset_3.csv  house_predict.ows  house_price_predict.csv  mlp_test.py  stroke.ipynb  stroke_data_clean.csv
python/: a_01.py  (+31 more)
raspberryPi/c_example/part3/bowlingGame/: CMakeLists.txt
(+497 files in other folders)
